--- a/mirrord-layer/Cargo.toml
+++ b/mirrord-layer/Cargo.toml
@@ -21,7 +21,7 @@ frida-gum = {version = "0.6.5", features = ["auto-download"]}
 futures = "0.3.21"
 clap = { version = "3.1.12", features = ["derive"] }
 k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
-kube = { version = "0.71.0", features = ["runtime", "derive", "client", "ws"] }
+kube = { version = "0.71.0", default-features = false, features = ["runtime", "derive", "client", "ws", "rustls-tls"] }
 
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0.79"
