mirrord-agent: Dockerfile use nightly fix

--- a/mirrord-agent/Dockerfile
+++ b/mirrord-agent/Dockerfile
@@ -1,6 +1,6 @@
 FROM rust:latest as build-env
 RUN apt update && apt install -y libpcap-dev cmake
-RUN rustup component add rustfmt
+RUN rustup toolchain install nightly --component rustfmt
 WORKDIR /app
 COPY . /app
 RUN cargo build --manifest-path mirrord-agent/Cargo.toml --release
