dev: fix devcontainer dockerfile

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,4 +5,4 @@ ARG VARIANT="buster"
 FROM mcr.microsoft.com/vscode/devcontainers/rust:0-${VARIANT}
 
 RUN apt update && apt install -y libpcap-dev cmake clang
-RUN rustup component add rustfmt --toolchain nightly-x86_64-unknown-linux-gnu
+RUN rustup toolchain install nightly-x86_64-unknown-linux-gnu
