--- a/mirrord-sip/Cargo.toml
+++ b/mirrord-sip/Cargo.toml
@@ -15,7 +15,7 @@ edition.workspace = true
 
 [dependencies]
 # mach_object = "0.1"
-object = {path = "/Users/aviramhassan/Code/object" } 
+object = {path = "0.29.0" }
 tracing.workspace = true
 tracing-subscriber.workspace = true
 anyhow.workspace = true
