--- a/mirrord-cli/Cargo.toml
+++ b/mirrord-cli/Cargo.toml
@@ -18,6 +18,7 @@ edition.workspace = true
 [dependencies]
 mirrord-auth = { path="../mirrord-auth", features = ["webbrowser"] }
 mirrord-progress = { path = "../mirrord-progress" }
+mirrord-sip = { path = "../mirrord-sip" }
 
 clap.workspace = true
 tracing.workspace = true
