--- a/mirrord-sip/Cargo.toml
+++ b/mirrord-sip/Cargo.toml
@@ -16,6 +16,8 @@ edition.workspace = true
 [dependencies]
 object = "0.29"
 memchr = "2"
+which = "4.3.0"
+
 tracing.workspace = true
 thiserror.workspace = true
 
