--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -253,12 +253,12 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           key: ubuntu-latest
-      - run: cargo build --manifest-path=./Cargo.toml
+      - run: cargo build -p mirrord --manifest-path=./Cargo.toml
       - name: upload layer
         uses: actions/upload-artifact@v3
         with:
-          name: layer-lib
-          path: target/debug/libmirrord_layer.so
+          name: mirrord-cli
+          path: target/debug/mirrord
           if-no-files-found: error
 
   integration_tests:
@@ -266,7 +266,7 @@ jobs:
     needs: [build_mirrord, changed_files]
     if: ${{needs.changed_files.outputs.rs_changed == 'true'}}
     env:
-      MIRRORD_TEST_USE_EXISTING_LIB: /home/runner/work/mirrord/mirrord/target/debug/libmirrord_layer.so
+      MIRRORD_TEST_USE_EXISTING: /home/runner/work/mirrord/mirrord/target/debug/mirrord
     steps:
       - uses: actions/checkout@v2 # Checkout the mirrord repo.
       - uses: actions-rs/toolchain@v1 # Install rust.
@@ -289,25 +289,23 @@ jobs:
         with:
           go-version: "1.19.0"
       - run: |
-          cd mirrord/layer/tests/apps/self_open
+          cd mirrord/cli/tests/apps/self_open
           go build -o 19
       - run: |
-          cd mirrord/layer/tests/apps/fileops
+          cd mirrord/cli/tests/apps/fileops
           cargo build
       - name: download layer # Download layer lib built in the `build_mirrord` job.
         uses: actions/download-artifact@v3
         with:
-          name: layer-lib
+          name: mirrord-cli
           path: target/debug/
       - run: cargo test -p mirrord-kube --features env_guard api::env_guard
-      - run: cargo test -p mirrord-layer
+      - run: cargo test -p mirrord
 
   integration_tests_macos:
     runs-on: macos-12
     needs: changed_files
     if: ${{needs.changed_files.outputs.rs_changed == 'true'}}
-    env:
-      MIRRORD_TEST_USE_EXISTING_LIB: ../../target/debug/libmirrord_layer.dylib
     steps:
       - uses: actions/checkout@v2 # Checkout the mirrord repo.
       - uses: actions-rs/toolchain@v1 # Install Rust.
@@ -322,12 +320,12 @@ jobs:
         with:
           go-version: "1.19.0"
       - run: | # Build Go app to test http mirroring with.
-          cd mirrord/layer/tests/apps/self_open
+          cd mirrord/cli/tests/apps/self_open
           go build -o 19
           cd ../app_go
           go build -o 19
       - run: |
-          cd mirrord/layer/tests/apps/fileops
+          cd mirrord/cli/tests/apps/fileops
           cargo build
       - uses: actions/setup-node@v3
         with:
@@ -337,8 +335,7 @@ jobs:
       - run: pip3 install flask # For http mirroring test with Flask.
       - run: pip3 install fastapi # For http mirroring test with FastAPI.
       - run: pip3 install uvicorn[standard] # For http mirroring test with FastAPI.
-      - run: cargo build -p mirrord-layer # Build layer lib. The tests load it into the apps.
-      - run: cargo test -p mirrord-layer
+      - run: cargo test -p mirrord
 
   e2e:
     runs-on: ubuntu-latest
