--- a/mirrord/layer/Cargo.toml
+++ b/mirrord/layer/Cargo.toml
@@ -59,6 +59,7 @@ os_info = "3"
 bytemuck = "1"
 hyper = { workspace = true, features = ["client"] }
 http-body-util  = { workspace = true }
+parking_lot = "0.12.1"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 mirrord-sip = { path = "../sip" }
