--- a/mirrord/layer/Cargo.toml
+++ b/mirrord/layer/Cargo.toml
@@ -70,7 +70,7 @@ hyper = "0.14"
 rstest = "*"
 test-cdylib = "*"
 tower = "0.4"
-tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "process"] }
+tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "process", "signal"] }
 
 [lib]
 crate_type = ["cdylib"]
