--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,14 @@ intellij-ext/build
 intellij-ext/libmirrord_layer.*
 intellij-ext/bin
 .idea/
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
+
