--- a/mirrord/cli/Cargo.toml
+++ b/mirrord/cli/Cargo.toml
@@ -54,6 +54,8 @@ socket2.workspace = true
 drain.workspace = true
 clap_complete = "4.4.1"
 tracing-appender = "0.2"
+tun = { version = "0.6", features = ["async"] }
+tokio-stream.workspace = true
 
 [target.'cfg(target_os = "macos")'.dependencies]
 mirrord-sip = { path = "../sip" }
